--- a/Astronomy-ObjC/Astronomy-ObjC/StoryBoards/Base.lproj/Main.storyboard
+++ b/Astronomy-ObjC/Astronomy-ObjC/StoryBoards/Base.lproj/Main.storyboard
@@ -16,65 +16,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="S4h-F8-Tab">
-                                <rect key="frame" x="158" y="88" width="98" height="22"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TbZ-On-oUY">
-                                        <rect key="frame" x="0.0" y="0.0" width="15.5" height="22"/>
-                                        <state key="normal" image="lessthan" catalog="system"/>
-                                        <connections>
-                                            <action selector="previousTapped:" destination="jfQ-aA-Q4l" eventType="touchUpInside" id="QWv-zX-Tl4"/>
-                                        </connections>
-                                    </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sol 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FiC-LH-AZG">
-                                        <rect key="frame" x="29.5" y="0.0" width="39" height="22"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2K0-Mf-tJQ">
-                                        <rect key="frame" x="82.5" y="0.0" width="15.5" height="22"/>
-                                        <state key="normal" image="greaterthan" catalog="system"/>
-                                        <connections>
-                                            <action selector="nextTapped:" destination="jfQ-aA-Q4l" eventType="touchUpInside" id="SVZ-8l-Gyz"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                            </stackView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4ei-pP-B0I">
-                                <rect key="frame" x="0.0" y="110" width="414" height="786"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qgc-to-EgQ">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="2" minimumInteritemSpacing="2" id="Wk9-Mc-xoa">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="2" minimumInteritemSpacing="2" id="P6C-vI-bar">
                                     <size key="itemSize" width="128" height="128"/>
-                                    <size key="estimatedItemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="UMU-ZE-OCu" customClass="SolPhotoCollectionViewCell" customModule="Astronomy_ObjC" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="dsV-nk-eRn" customClass="SolPhotoCollectionViewCell" customModule="Astronomy_ObjC" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="aQg-qA-WPw">
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="vd5-iU-sG3">
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LWt-E8-Oel">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8kE-hG-dfo">
                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2HY-4w-aw2">
+                                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="2HY-4w-aw2" secondAttribute="height" multiplier="1:1" id="0cY-Wn-87K"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" secondItem="LWt-E8-Oel" secondAttribute="height" multiplier="1:1" id="jtL-uo-mUq"/>
+                                                        <constraint firstAttribute="bottom" secondItem="2HY-4w-aw2" secondAttribute="bottom" id="lhT-7M-Be9"/>
+                                                        <constraint firstAttribute="trailing" secondItem="2HY-4w-aw2" secondAttribute="trailing" id="nH9-zh-MrA"/>
+                                                        <constraint firstItem="2HY-4w-aw2" firstAttribute="leading" secondItem="8kE-hG-dfo" secondAttribute="leading" id="yqS-IP-E5u"/>
+                                                        <constraint firstItem="2HY-4w-aw2" firstAttribute="top" secondItem="8kE-hG-dfo" secondAttribute="top" id="ysa-6o-RbM"/>
                                                     </constraints>
-                                                </imageView>
+                                                </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="LWt-E8-Oel" firstAttribute="top" secondItem="aQg-qA-WPw" secondAttribute="top" id="m0a-Ie-Qwt"/>
-                                                <constraint firstAttribute="trailing" secondItem="LWt-E8-Oel" secondAttribute="trailing" id="t0S-Us-8wZ"/>
-                                                <constraint firstItem="LWt-E8-Oel" firstAttribute="leading" secondItem="aQg-qA-WPw" secondAttribute="leading" id="wxp-w6-H8k"/>
-                                                <constraint firstAttribute="bottom" secondItem="LWt-E8-Oel" secondAttribute="bottom" id="zhi-jF-wRp"/>
+                                                <constraint firstItem="8kE-hG-dfo" firstAttribute="leading" secondItem="vd5-iU-sG3" secondAttribute="leading" id="6lF-jv-Sae"/>
+                                                <constraint firstAttribute="bottom" secondItem="8kE-hG-dfo" secondAttribute="bottom" id="AaC-3x-hqv"/>
+                                                <constraint firstAttribute="trailing" secondItem="8kE-hG-dfo" secondAttribute="trailing" id="EW7-Vg-cCb"/>
+                                                <constraint firstItem="8kE-hG-dfo" firstAttribute="top" secondItem="vd5-iU-sG3" secondAttribute="top" id="dle-jc-F5b"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
-                                            <outlet property="imageView" destination="LWt-E8-Oel" id="tQG-WD-cI7"/>
+                                            <outlet property="imageView" destination="2HY-4w-aw2" id="g8o-BC-uPD"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -82,24 +68,62 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="4ei-pP-B0I" firstAttribute="trailing" secondItem="PPF-Qy-p1C" secondAttribute="trailing" id="14N-tY-jUt"/>
-                            <constraint firstItem="S4h-F8-Tab" firstAttribute="centerX" secondItem="ChQ-Ls-Ujc" secondAttribute="centerX" id="34X-f5-icU"/>
-                            <constraint firstItem="4ei-pP-B0I" firstAttribute="leading" secondItem="PPF-Qy-p1C" secondAttribute="leading" id="HLL-KC-tiw"/>
-                            <constraint firstAttribute="bottom" secondItem="4ei-pP-B0I" secondAttribute="bottom" id="P1o-vr-rmI"/>
-                            <constraint firstItem="4ei-pP-B0I" firstAttribute="top" secondItem="S4h-F8-Tab" secondAttribute="bottom" id="QNN-aJ-xUO"/>
-                            <constraint firstItem="S4h-F8-Tab" firstAttribute="top" secondItem="PPF-Qy-p1C" secondAttribute="top" id="ts3-zR-urX"/>
+                            <constraint firstItem="qgc-to-EgQ" firstAttribute="trailing" secondItem="PPF-Qy-p1C" secondAttribute="trailing" id="5te-WL-L73"/>
+                            <constraint firstItem="qgc-to-EgQ" firstAttribute="top" secondItem="PPF-Qy-p1C" secondAttribute="top" id="JG4-7l-7Oj"/>
+                            <constraint firstAttribute="bottom" secondItem="qgc-to-EgQ" secondAttribute="bottom" id="Qnj-bY-JAj"/>
+                            <constraint firstItem="qgc-to-EgQ" firstAttribute="leading" secondItem="PPF-Qy-p1C" secondAttribute="leading" id="fql-HV-Dl9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PPF-Qy-p1C"/>
                     </view>
-                    <navigationItem key="navigationItem" id="pMC-V8-7st"/>
+                    <navigationItem key="navigationItem" id="kZh-oq-1cN">
+                        <nil key="title"/>
+                        <view key="titleView" contentMode="scaleToFill" id="NMR-a3-Sde">
+                            <rect key="frame" x="207" y="22" width="0.0" height="0.0"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="0E0-iB-Ltd">
+                                    <rect key="frame" x="-57" y="-31" width="114" height="62"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="xQN-aH-d27">
+                                            <rect key="frame" x="0.0" y="20" width="16" height="22"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <state key="normal" image="lessthan" catalog="system"/>
+                                            <connections>
+                                                <action selector="previousTapped:" destination="jfQ-aA-Q4l" eventType="touchUpInside" id="x8p-SV-9sz"/>
+                                            </connections>
+                                        </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DGa-nR-5k2">
+                                            <rect key="frame" x="32" y="6" width="50.5" height="50"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kLF-lg-Gi3">
+                                            <rect key="frame" x="98.5" y="20" width="15.5" height="22"/>
+                                            <state key="normal" image="greaterthan" catalog="system"/>
+                                            <connections>
+                                                <action selector="nextTapped:" destination="jfQ-aA-Q4l" eventType="touchUpInside" id="QPX-qb-8zU"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                </stackView>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <constraints>
+                                <constraint firstItem="0E0-iB-Ltd" firstAttribute="centerY" secondItem="NMR-a3-Sde" secondAttribute="centerY" id="0CT-1h-EKG"/>
+                                <constraint firstItem="0E0-iB-Ltd" firstAttribute="centerX" secondItem="NMR-a3-Sde" secondAttribute="centerX" id="Qc7-HY-eft"/>
+                            </constraints>
+                        </view>
+                    </navigationItem>
                     <connections>
-                        <outlet property="collectionView" destination="4ei-pP-B0I" id="8dO-qU-0hY"/>
-                        <outlet property="solIdLabel" destination="FiC-LH-AZG" id="ak8-Wc-6x5"/>
+                        <outlet property="collectionView" destination="qgc-to-EgQ" id="iZz-VT-GOy"/>
+                        <outlet property="solIdLabel" destination="DGa-nR-5k2" id="V8H-mY-unv"/>
+                        <outlet property="titleView" destination="0E0-iB-Ltd" id="lwB-c2-2dF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rao-Tp-P6A" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-55.072463768115945" y="137.94642857142856"/>
+            <point key="canvasLocation" x="-47.826086956521742" y="137.94642857142856"/>
         </scene>
         <!--Photo Detail View Controller-->
         <scene sceneID="NkD-IE-4gO">
