--- a/AstronomyObjC/AstronomyObjC/Views/Base.lproj/Main.storyboard
+++ b/AstronomyObjC/AstronomyObjC/Views/Base.lproj/Main.storyboard
@@ -75,26 +75,26 @@
         <scene sceneID="u4i-rW-dT6">
             <objects>
                 <collectionViewController id="lRC-bg-syg" customClass="MarsPhotosCollectionViewController" customModule="AstronomyObjC" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="wQs-BP-FHG">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" id="wQs-BP-FHG">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="42b-hU-bVQ">
-                            <size key="itemSize" width="128" height="128"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="42b-hU-bVQ">
+                            <size key="itemSize" width="180" height="180"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MarsCell" id="RYB-Fo-0Ge" customClass="TMCMarsPhotoCollectionViewCell">
-                                <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="1MO-gL-8qY">
-                                    <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ebZ-tF-Bpw">
-                                            <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                         </imageView>
                                     </subviews>
                                     <constraints>
@@ -104,7 +104,7 @@
                                         <constraint firstAttribute="bottom" secondItem="ebZ-tF-Bpw" secondAttribute="bottom" id="oGb-1o-Va3"/>
                                     </constraints>
                                 </collectionViewCellContentView>
-                                <size key="customSize" width="180" height="180"/>
+                                <size key="customSize" width="200" height="200"/>
                                 <connections>
                                     <outlet property="imageView" destination="ebZ-tF-Bpw" id="HLr-y1-IVk"/>
                                     <segue destination="Q0D-bw-ZUh" kind="show" identifier="PhotoDetailSegue" id="rR7-6f-jpO"/>
